Issue #SB-7813 fix: text align center

--- a/org.ekstep.keyboard-1.1/renderer/style/style.css
+++ b/org.ekstep.keyboard-1.1/renderer/style/style.css
@@ -78,6 +78,7 @@
   height: calc(100% - 63%);
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .key_barakhadi:hover,
 .key_barakhadi_numeric:hover {
